fix: Nav overflow mobile

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -2,6 +2,7 @@ $height: 42px;
 nav {
   color: $light-grey;
   border-top: 1px solid $dark-grey;
+  overflow: hidden;
   padding-top: 0;
   width: 100%;
 
